[project]
name = "uid-rlhf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.33.2",
    "numpy>=2.3.1",
    "rich>=14.0.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.1",
    "uid",
]

[tool.uv.workspace]
members = ["uid"]

[tool.uv.sources]
uid = { workspace = true }
